kps/app/assets/stylesheets/application.css
html, body {
	height: 100%; 
	margin: 0; 
	padding:0;
	}
	
   #content {
   	vertical-align: top;
	width: 100%; 
	height: 100%; 
	margin: 0; 
	position: relative;
	}
   
   #sidebar {
	margin: 0;
	width: 150px; 
	height: 100%;
	padding:0;
	float: left;
	background-color: gray;
	position: fixed;
   }
   
   #main {
	margin: 0;
	margin-left: 160px;
	top: 0;
	min-height:100%;
	padding:0;
	float: left;
	background-size:100%;
	background-attachment: fixed;
   }
   
   h1{
	margin-top:0px;
	color:#000000
   }
   
   p{
   	padding-top: -10px;
   	margin-top: -10px;
	color:#000000
   }

   strong{
   	padding-top: -10px;
   	margin-top: -10px;
   }
   
   div#sidebar table{
	color:#000000;
	border-collapse: collapse;
   }

   th, td, tr {
    padding: 3px;
   }
td.side_table, tr.side_table {
    padding: 0;
   }

td {
	text-align: center;
}
   
	   

